# ML_FoCal_FinalProject

./: .gitignore  CMakeLists.txt  README.md  metadata_template.csv  ml_identify_run_energies.py  run_rootifier.sh  test.parquet
3D-CNN/: 3D-CNN_Regression_Interpolation.ipynb  3D-CNN_Regression_Uncertainties.ipynb  3D-CNN_Regression_heatmap.ipynb
Amanda/: dummy.py
AutoEncoder/: Focal_Auto_Encode.ipynb
Barbara/: 103_train_energy_regressor_WO_EpiCal_chmap.py  202_extract_energy_features_chmap.py  300_plots_SiPM_Comp.py  301_plots_EpiCal_comp.py  303_plots_chmap.py  Notes.txt  train_energy_regressor.py
Classifier/: CNN_Classifier_60GeV.ipynb  CNN_classifier_60GeV_holdout.pt  MLP_Classifier_60GeV.ipynb  MLP_Classifier_60GeV_Holdout.ipynb  XGB_Classifier_60GeV.ipynb  XGB_Classifier_60GeV_Holdout.ipynb
Data/: Run580.ch2g
Metadata/: 100_train_energy_regressor.py  101_train_energy_regressor_Epical_test.py  102_train_energy_regressor_WO_EpiCal.py  104_train_energy_regressor_WOE_chmap_wiggle.py  105_train_energy_regressor_SiPM_comp_WOE.py  200_extract_energy_features.py  channelmapping.channelmapping
Metadata/dump/101_train_energy_regressor_Epical_test/: dataset_comparison_metrics.csv
Metadata/dump/105_train_energy_regressor_SiPM_comp_WOE/: sipm_bias_training_comparison.csv
Metadata/dump/MLP_Regression_hadron_energy/: mlp_regressor_hadron_chmap.pt
Metadata/dump/raw_mlp_regressor/: raw_mlp_regressor_hadron.pt
Oliver/: dummy.py
Rasmus/: Focal_Auto_Encode.ipynb  classifier_60GeV.pt  multi_run_ae.pt  multi_run_explore.ipynb
Rasmus/AutoEncoder/: Focal_Auto_Encode.ipynb  multi_run_explore.ipynb
Rasmus/Classifier/: CNN_Classifier_60GeV_Holdout.ipynb  Classifier_60GeV.ipynb  Classifier_60GeV_Holdout.ipynb
Rasmus/Regression/: MLP_Regression_hadron_energy.ipynb  Regression_hadron_energy.ipynb  XGB_Regression_hadron_energy.ipynb  regressor_hadron.pt
Regression/: CNN_Regression_hadron_energy.ipynb  CNN_regressor_hadron.pt  XGB_Regression_hadron_energy.ipynb
